fix: update footer.html
Signed-off-by: D.O.T <166849853+DavidO-GRC@users.noreply.github.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 >
   <p>
     {{- '©' }}
-    <time>2024</time>
+    <time>{{ 'now' | date: '%Y' }}</time>
 
     {% if site.social.links %}
       <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
