fix: update jekyll-theme-chirpy.scss
Signed-off-by: D.O.T <166849853+DavidO-GRC@users.noreply.github.com>

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -9,3 +9,9 @@
 ';
 
 /* append your custom style below */
+/* Hide the 'Last Updated' timestamp but keep the 'Published' date */
+.post-meta .last-modified-at, 
+.post-meta span:has(> i.fa-sync-alt),
+.post-meta i.fa-sync-alt {
+    display: none !important;
+}
